test(search): add Phase 20 SMP lifecycle diagnostics